[ADDED] outer glow
Former-commit-id: a5195bd03421201355ba8ede3940f4cda20b4887

--- a/easyeditor/platform/msvc2008/projects/librender.vcproj
+++ b/easyeditor/platform/msvc2008/projects/librender.vcproj
@@ -270,6 +270,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\source\render\SpriteOuterGlow.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\include\ee\SpriteOuterGlow.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\source\render\SpriteRenderer.cpp"
 				>
 			</File>
