[ADDED] property setting for filter
Former-commit-id: 232325cc12b9455e233c30110fab2663001bd08f

--- a/easyeditor/platform/msvc2008/projects/libgui.vcproj
+++ b/easyeditor/platform/msvc2008/projects/libgui.vcproj
@@ -386,6 +386,18 @@
 				>
 			</File>
 		</Filter>
+		<Filter
+			Name="utility"
+			>
+			<File
+				RelativePath="..\..\..\source\gui\WXHelper.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\include\ee\WXHelper.h"
+				>
+			</File>
+		</Filter>
 	</Files>
 	<Globals>
 	</Globals>
