--- a/easyeditor/platform/msvc2008/projects/libview.vcproj
+++ b/easyeditor/platform/msvc2008/projects/libview.vcproj
@@ -383,6 +383,18 @@
 						RelativePath="..\..\..\include\ee\SpritePropertySetting.h"
 						>
 					</File>
+					<Filter
+						Name="helper"
+						>
+						<File
+							RelativePath="..\..\..\source\view\property\SpriteFilterPSHelper.cpp"
+							>
+						</File>
+						<File
+							RelativePath="..\..\..\include\ee\SpriteFilterPSHelper.h"
+							>
+						</File>
+					</Filter>
 				</Filter>
 			</Filter>
 			<Filter
