[ADDED] op pass switch
Former-commit-id: 77567308d4727e7d2eec7e636b69b0f505edaabb

--- a/easyanim/platform/msvc2008/projects/easyanimation.vcproj
+++ b/easyanim/platform/msvc2008/projects/easyanimation.vcproj
@@ -556,11 +556,11 @@
 					>
 				</File>
 				<File
-					RelativePath="..\..\..\src\easyanimation\edit\CommonCMPT.cpp"
+					RelativePath="..\..\..\src\easyanimation\edit\NormalCMPT.cpp"
 					>
 				</File>
 				<File
-					RelativePath="..\..\..\src\easyanimation\edit\CommonCMPT.h"
+					RelativePath="..\..\..\src\easyanimation\edit\NormalCMPT.h"
 					>
 				</File>
 				<File
