[ADDED] load psd
Former-commit-id: bd5b8966c4e604406ab75bf76c2da36bc614d545

--- a/easycomplex/platform/msvc2008/projects/libcomplex.vcproj
+++ b/easycomplex/platform/msvc2008/projects/libcomplex.vcproj
@@ -188,6 +188,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\libcomplex\LoadFromPSD.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libcomplex\LoadFromPSD.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\libcomplex\NodeToSprite.cpp"
 					>
 				</File>
