[ADDED] render color mul
Former-commit-id: 786c3b70ec8ae63bc20f0c069cfcfeba3b9bbc1f

--- a/sprite2/platform/msvc2008/projects/sprite2.vcproj
+++ b/sprite2/platform/msvc2008/projects/sprite2.vcproj
@@ -152,6 +152,10 @@
 				Name="render"
 				>
 				<File
+					RelativePath="..\..\..\source\dataset\RenderColor.cpp"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\include\sprite2\RenderColor.h"
 					>
 				</File>
