[CHANGED] sym decide if mul outer mat
Former-commit-id: fc0971196ffa122e4aa09ab9019b5a80d35391f9

--- a/sprite2/platform/msvc2008/projects/sprite2.vcproj
+++ b/sprite2/platform/msvc2008/projects/sprite2.vcproj
@@ -263,11 +263,11 @@
 						>
 					</File>
 					<File
-						RelativePath="..\..\..\include\sprite2\RenderCamera.h"
+						RelativePath="..\..\..\include\sprite2\RenderCamera.cpp"
 						>
 					</File>
 					<File
-						RelativePath="..\..\..\include\sprite2\RenderCamera.inl"
+						RelativePath="..\..\..\include\sprite2\RenderCamera.h"
 						>
 					</File>
 				</Filter>
