[ADDED] logger & fs
Former-commit-id: 70243152272cee072d221ac9dc1b2c136d5281c5

--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,9 @@
 [submodule "camera25/src/camera25"]
 	path = camera25/src/camera25
 	url = ssh://tea.ejoy.com:3222/LR/camera25.git
+[submodule "fs/src/fs"]
+	path = fs/src/fs
+	url = ssh://git@tea.ejoy.com:3222/LR/fs.git
+[submodule "logger/src/logger"]
+	path = logger/src/logger
+	url = ssh://git@tea.ejoy.com:3222/LR/logger.git
