--- a/dtex/platform/msvc2008/projects/dtex.vcproj
+++ b/dtex/platform/msvc2008/projects/dtex.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\..\src;..\..\..\..\ejoy2d\src;..\..\..\..\particle\src;..\..\..\..\ds\src\ds;..\..\..\..\editor-external\rg_etc1;..\..\..\..\editor-external\libpng\include\libpng;..\..\..\..\editor-external\c99;..\..\..\..\editor-external\gl\include;..\..\..\..\editor-external\lua\include;..\..\..\..\editor-external\cjson\include;..\..\..\..\editor-external\lzma\include;..\..\..\..\editor-external\pthread\include"
+				AdditionalIncludeDirectories="..\..\..\src;..\..\..\..\ejoy2d\src;..\..\..\..\logger\src\logger;..\..\..\..\fs\src\fs;..\..\..\..\particle\src;..\..\..\..\ds\src\ds;..\..\..\..\editor-external\rg_etc1;..\..\..\..\editor-external\libpng\include\libpng;..\..\..\..\editor-external\c99;..\..\..\..\editor-external\gl\include;..\..\..\..\editor-external\lua\include;..\..\..\..\editor-external\cjson\include;..\..\..\..\editor-external\lzma\include;..\..\..\..\editor-external\pthread\include"
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;_CRT_SECURE_NO_WARNINGS;GLEW_STATIC;USED_IN_EDITOR"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -105,7 +105,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\..\..\src;..\..\..\..\ejoy2d\src;..\..\..\..\particle\src;..\..\..\..\ds\src\ds;..\..\..\..\editor-external\rg_etc1;..\..\..\..\editor-external\libpng\include\libpng;..\..\..\..\editor-external\c99;..\..\..\..\editor-external\gl\include;..\..\..\..\editor-external\lua\include;..\..\..\..\editor-external\cjson\include;..\..\..\..\editor-external\lzma\include;..\..\..\..\editor-external\pthread\include"
+				AdditionalIncludeDirectories="..\..\..\src;..\..\..\..\ejoy2d\src;..\..\..\..\logger\src\logger;..\..\..\..\fs\src\fs;..\..\..\..\particle\src;..\..\..\..\ds\src\ds;..\..\..\..\editor-external\rg_etc1;..\..\..\..\editor-external\libpng\include\libpng;..\..\..\..\editor-external\c99;..\..\..\..\editor-external\gl\include;..\..\..\..\editor-external\lua\include;..\..\..\..\editor-external\cjson\include;..\..\..\..\editor-external\lzma\include;..\..\..\..\editor-external\pthread\include"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;_CRT_SECURE_NO_WARNINGS;GLEW_STATIC;USED_IN_EDITOR"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -441,14 +441,6 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\src\dtex_file.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\dtex_file_common.c"
-				>
-			</File>
-			<File
 				RelativePath="..\..\..\src\dtex_hard_res.c"
 				>
 			</File>
@@ -462,14 +454,6 @@
 			</File>
 			<File
 				RelativePath="..\..\..\src\dtex_lod.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\dtex_log.c"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\dtex_log.h"
 				>
 			</File>
 			<File
