[ADDED] pack with etc2
Former-commit-id: fb775ab1d8b62dc061c47e28c7f4ca31a917af57

--- a/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -533,6 +533,14 @@
 						>
 					</File>
 					<File
+						RelativePath="..\..\..\src\easydb_cl\TransToETC2.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\easydb_cl\TransToETC2.h"
+						>
+					</File>
+					<File
 						RelativePath="..\..\..\src\easydb\TransToPVR.cpp"
 						>
 					</File>
