--- a/easyimage/platform/msvc2008/projects/libimage.vcproj
+++ b/easyimage/platform/msvc2008/projects/libimage.vcproj
@@ -305,6 +305,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\libimage\TransToETC2.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libimage\TransToETC2.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\libimage\TransToPVR.cpp"
 				>
 			</File>
