[FIXED] load pkm tex
Former-commit-id: 46e3b1d01832d3e7a3a08dd05cbcf0fa4acc38de

--- a/easyimage/platform/msvc2008/projects/libimage.vcproj
+++ b/easyimage/platform/msvc2008/projects/libimage.vcproj
@@ -328,6 +328,14 @@
 				Name="etcpack"
 				>
 				<File
+					RelativePath="..\..\..\..\editor-external\etcpack\c_wrap_etcpack.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\..\editor-external\etcpack\c_wrap_etcpack.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\..\editor-external\etcpack\source\etcdec.cxx"
 					>
 				</File>
