[ADDED] console progress bar
Former-commit-id: 29c485457e5eec880a615f214dc4cd90e85c0eec

--- a/easyeditor/platform/msvc2008/projects/libtool.vcproj
+++ b/easyeditor/platform/msvc2008/projects/libtool.vcproj
@@ -231,6 +231,14 @@
 			</File>
 		</Filter>
 		<File
+			RelativePath="..\..\..\source\tool\ConsoleProgressBar.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\include\ee\ConsoleProgressBar.h"
+			>
+		</File>
+		<File
 			RelativePath="..\..\..\source\tool\Exception.cpp"
 			>
 		</File>
