[ADDED] tag cfg
Former-commit-id: 569abb088c319fce716872e4b69e536f1cdfc5a3

--- a/lr/platform/msvc2008/projects/lr.vcproj
+++ b/lr/platform/msvc2008/projects/lr.vcproj
@@ -585,6 +585,18 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="tag"
+				>
+				<File
+					RelativePath="..\..\..\src\lr\dataset\TagCfg.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\lr\dataset\TagCfg.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="preview"
