[ADDED] group for complex
Former-commit-id: 23a04a9621c1114ca8a418272e6012f9148b9f97

--- a/easycomplex/platform/msvc2008/projects/libcomplex.vcproj
+++ b/easycomplex/platform/msvc2008/projects/libcomplex.vcproj
@@ -493,6 +493,14 @@
 			Name="utility"
 			>
 			<File
+				RelativePath="..\..\..\src\libcomplex\GroupHelper.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libcomplex\GroupHelper.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\libcomplex\OpenSymbolDialog.cpp"
 				>
 			</File>
