[ADDED] create ecomplex for lr
Former-commit-id: ce53d09adfe20556a5341050ee3634ff8924f842

--- a/lr/platform/msvc2008/projects/lr.vcproj
+++ b/lr/platform/msvc2008/projects/lr.vcproj
@@ -457,6 +457,10 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\lr\dataset\NewComplexUD.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\lr\dataset\ShapesUD.h"
 					>
 				</File>
@@ -572,18 +576,6 @@
 						>
 					</File>
 				</Filter>
-			</Filter>
-			<Filter
-				Name="group"
-				>
-				<File
-					RelativePath="..\..\..\src\lr\dataset\GroupHelper.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\..\src\lr\dataset\GroupHelper.h"
-					>
-				</File>
 			</Filter>
 			<Filter
 				Name="tag"
