--- a/easyeditor/platform/msvc2008/projects/libtool.vcproj
+++ b/easyeditor/platform/msvc2008/projects/libtool.vcproj
@@ -239,6 +239,14 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\..\source\tool\CrossGuides.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\include\ee\CrossGuides.h"
+			>
+		</File>
+		<File
 			RelativePath="..\..\..\source\tool\Exception.cpp"
 			>
 		</File>
