[ADDED] onchar for offset spr
Former-commit-id: eb4dc40244510c21eed75de4179bd3f9f6cec553

--- a/easyeditor/platform/msvc2008/projects/libdata.vcproj
+++ b/easyeditor/platform/msvc2008/projects/libdata.vcproj
@@ -374,11 +374,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\include\ee\common_type.h"
+				RelativePath="..\..\..\include\ee\DataTraverseType.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\include\ee\DataTraverseType.h"
+				RelativePath="..\..\..\include\ee\key_type.h"
 				>
 			</File>
 			<File
