[ADDED] order layer for multi sprites
Former-commit-id: b289b618d880987c850be5384fe831102c49a00f

--- a/easyeditor/platform/msvc2008/projects/libview.vcproj
+++ b/easyeditor/platform/msvc2008/projects/libview.vcproj
@@ -501,6 +501,10 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\include\ee\SprDataContainer.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\source\view\stage\SpritesContainer.cpp"
 					>
 				</File>
