[FIXED] anchor absorb should be closed for open a sym in ecomplex
Former-commit-id: b52cb3235944250348fef92d5ea2e3e05001b989

--- a/easycomplex/platform/msvc2008/projects/libcomplex.vcproj
+++ b/easycomplex/platform/msvc2008/projects/libcomplex.vcproj
@@ -508,6 +508,10 @@
 				RelativePath="..\..\..\src\libcomplex\OpenSymbolDialog.h"
 				>
 			</File>
+			<File
+				RelativePath="..\..\..\src\libcomplex\OpenSymbolLsn.h"
+				>
+			</File>
 		</Filter>
 		<File
 			RelativePath="..\..\..\src\libcomplex\config.h"
